tests/compile_fail/as_ref/struct_attr_empty.stderr
error: `#[as_ref(...)]` can only be applied to structs with exactly one field
 --> tests/compile_fail/as_ref/struct_attr_empty.rs:2:1
  |
2 | #[as_ref(forward)]
  | ^
